<resources>
    <string name="app_name">Tanfi</string>
    <string name="email">Alamat email</string>
    <string name="email_field">ex: john.doe@gmail.com</string>
    <string name="password">Password</string>
    <string name="ex_p4s5w012d">ex: P4s5w012d</string>
    <string name="login">Login</string>
    <string name="masuk_ke_aplikasi">Masuk ke aplikasi</string>
    <string name="grammar">Login terlebih dahulu untuk menggunakan aplikasi</string>
    <string name="belum_punya_akun">Belum Punya Akun</string>
    <string name="buat_akun">Buat akun</string>
    <string name="grammar_register">Buat akun sebelum Anda dapat menggunakan aplikasi</string>
    <string name="confirm">Masukkan ulang password</string>
    <string name="pw_confirm">Konfirmasi Password</string>
    <string name="register">Daftar</string>
    <string name="sudah_punya_akun">Sudah Punya Akun</string>
    <string name="nama_depan">Nama depan</string>
    <string name="nama_belakang">Nama belakang</string>
    <string name="ex_john">ex: john</string>
    <string name="ex_joe">ex: joe</string>
    <string name="date">Sabtu, 17 Juli 2021</string>
    <string name="anda_tidak_memiliki_tugas_untuk_sekarang">Anda tidak memiliki tugas untuk sekarang</string>
    <string name="todo">TODO</string>
    <string name="tugas">Tugas</string>
    <string name="keuangan">Keuangan</string>
    <string name="lainnya">Lainnya</string>
    <string name="tags">Tags</string>
    <string name="tipe_tugas">Tipe tugas</string>
    <string name="task_title">ex: Setrika baju</string>
    <string name="judul">Judul</string>
    <string name="desc">Deskripsi tugas</string>
    <string name="waktu">Waktu</string>
    <string name="add_date">Tanggal</string>
    <string name="tambah_subtugas">Tambah subtugas</string>
    <string name="save">Simpan</string>
    <string name="task_desc">Menggunakan alat</string>
    <string name="daily">Harian</string>
    <string name="title">Tampilkan tugas berdasarkan</string>
    <string name="project">Proyek</string>
    <string name="chose">Pilih</string>
    <string name="tag">Tags belum dimasukkan</string>
    <string name="start">Mulai</string>
    <string name="next">Lanjut</string>
    <string name="task_grammar">Tanfi memepermudah kamu dalam melaksanakan dan mengingat tugas</string>
    <string name="finance_grammar">Mencatat dan menghitung seberapa banyak kamu menghemat dengan menggunakan Tanfi</string>
    <string name="tanfi">Tanfi</string>
    <string name="loop">Pengulangan</string>
    <string name="nothing">Tidak ada</string>
    <string name="weekly">Mingguan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tags_tugas">Tags tugas</string>
    <string name="tags_grammar">Tags belum dimasukkan</string>
    <string name="report">Laporan</string>
    <string name="setting">Pengaturan</string>
    <string name="completed">Tugas yang selesai</string>
    <string name="log_out">Log out</string>
    <string name="time">Jam</string>
    <string name="begin">Jam mulai</string>
    <string name="jam_berakhir">Jam berakhir</string>
    <string name="space">-</string>
</resources>