<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@drawable/popup_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="16sp"
            android:textColor="?attr/colorScheme"/>
        
        <!-- here is action field -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/daily"
                android:layout_width="76dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/login_button"
                android:text="@string/chose"
                android:fontFamily="@font/montserrat_semi_bold"
                android:textSize="12sp"
                android:textColor="@color/lightSty"
                android:textAllCaps="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/daily"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="14sp"
                android:textColor="?attr/colorScheme"/>

            <Button
                android:id="@+id/project"
                android:layout_width="76dp"
                android:layout_height="36dp"
                android:layout_marginTop="50dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/login_button"
                android:text="@string/chose"
                android:fontFamily="@font/montserrat_semi_bold"
                android:textSize="12sp"
                android:textColor="@color/lightSty"
                android:textAllCaps="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="57dp"
                android:text="@string/project"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="14sp"
                android:textColor="?attr/colorScheme"/>
            
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>