<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorBackgroundFloating"
    tools:context=".Calendar">
    
    <CalendarView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/calendar_view_bg">

    </CalendarView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loop"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="?attr/color"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/loop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/nothing"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="?attr/color"
            android:textSize="14sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/save_daily_task"
            android:layout_width="190dp"
            android:layout_height="52dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:background="@drawable/login_button"
            android:text="@string/save"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textSize="20sp"
            android:textColor="@color/lightSty"
            android:textAllCaps="false" />

    </RelativeLayout>

</LinearLayout>