<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/calendar_view_bg">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <CalendarView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/CalendarView">

            </CalendarView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loop"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="?attr/color"
                android:textSize="16sp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp">

                    <RadioButton
                        android:id="@+id/nothing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/custome_radio"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/with_daily"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:button="@drawable/custome_radio"/>

                    <RadioButton
                        android:id="@+id/with_weekly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:button="@drawable/custome_radio"/>

                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/nothing"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="14sp"
                    android:textColor="?attr/colorScheme"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/daily"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="14sp"
                    android:textColor="?attr/colorScheme"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="93dp"
                    android:text="@string/weekly"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="14sp"
                    android:textColor="?attr/colorScheme"/>

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/save_time"
                android:layout_width="190dp"
                android:layout_height="52dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="40dp"
                android:background="@drawable/login_button"
                android:text="@string/save"
                android:fontFamily="@font/montserrat_semi_bold"
                android:textSize="20sp"
                android:textColor="@color/lightSty"
                android:textAllCaps="false" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>