<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackgroundFloating"
    tools:context=".TaskDashboard">

    <LinearLayout
        android:id="@+id/nav_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/category_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginStart="130dp"
                android:src="@drawable/ic_report"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/report"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="18sp"
                android:textColor="?attr/color"
                android:textAlignment="textEnd"
                android:text="@string/report"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="135dp"
                android:src="@drawable/ic_setting"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/setting"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="18sp"
                android:textColor="?attr/color"
                android:textAlignment="textEnd"
                android:text="@string/setting"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="133dp"
                android:src="@drawable/ic_complete"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/completed"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="18sp"
                android:textColor="?attr/color"
                android:textAlignment="textEnd"
                android:text="@string/completed"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:layout_marginBottom="90dp">

            <RelativeLayout
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/logout_bg">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="123dp"
                    android:src="@drawable/ic_logout"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="18sp"
                    android:textColor="@color/lightSty"
                    android:textAlignment="textEnd"
                    android:text="@string/log_out"/>

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:padding="5dp"
            app:elevation="500dp"
            android:background="@drawable/card_bottom_nav"
            android:layout_alignParentBottom="true"
            app:menu="@menu/bottom_nav_menu">

            <ImageView
                android:id="@+id/add_task"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_add_task"
                android:contentDescription="@string/todo" />

        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </RelativeLayout>

</RelativeLayout>